@@ -1,0 +1,8 @@
+/* 
+ * config_h.in is a template file used by configure to produce config.h.
+ * config_h is then transformed (by config.status) into the header file 
+ * config.h.
+ * $Header: /users/source/archives/misc_tools.vcs/RCS/config_h.in,v 1.1 1994/07/11 22:56:20 tom Exp $
+ */
+
+@DEFS@
